CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file..

Version 1.9.0x
---------------------------------------------------------------------
3 November 2008
+ loadObject stops with a blank result instead of trying to plug
  results.
+ Default theme - fixed comment buttons

30 October 2008
+ Added error check for reroute function in Core

28 October 2008
+ DBPager - stripping tags from alt sort image parameter
+ File - getMimeType goes to a final test if mime_content_type fails.

27 October 2008
+ Open window javascript has a secure option that a child window can
  use to test the validity of the parent.
+ Core : securePopup function tests the validity of the opener window
  dependant on the use of the secure option in open_window
+ New javascript secure_pop : used by Core to assure a parent called
  the child window.
+ Link
  o Can now salt the authkey with its values.
  o convertAmp function added
+ Text : added saltArray function to help with salts from arrays
+ Added missing fckeditor improvements to update script.

20 October 2008
+ Blog summary added to key in conversion.
+ Init.php - setlocale tries different utf8 configurations
+ FCKeditor - changed option in custom.js to prevent blank paragraph
  tags.
+ Updated: javascript/editors/fckeditor/editor/custom.js      


17 October 2008
+ Database
  o Using addColumn with the "as" parameter was causing problems with the
    getObjects function.
  o getObjects passes extra arguments to the plugObject function instead
    of passing them to the object's construct function. Developers will
    need to add a postPlug function their object's class.
  o Database was passing over variables set to null when performing a
    post result indexing.
  o getObjects now runs the postPlug function after loading.

+ Core
  o plugObject now allows you to send arguments as the third parameter
    and have them used in the object's postPlug function.