@@ -4,6 +4,9 @@ its own separate CHANGELOG file..
 
 Version 1.9.0x
 ---------------------------------------------------------------------
+4 November 2008
++ Patch #2162757 by Eloi George. Changes restrictEdit function in Key.
+
 3 November 2008
 + loadObject stops with a blank result instead of trying to plug
   results.
